# flick

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flick_project_assistant.bat  flick_project_assistant.command  flick_project_assistant.nu  flick_shell.bat  flick_shell.command  flick_shell.nu
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BACKLOG.md  CONFIGURATION.md  INIT_COMMAND.md  ISSUES.md  LIBRARY_EXTRACTION.md  MONADIC_TOOLS.md  NAMED_MODELS.md  OVERVIEW.md  REVIEW_FINDINGS.md  SANDBOX.md  STATUS.md
flick/: Cargo.toml
flick-cli/: Cargo.toml
flick-cli/src/: main.rs  prompter.rs
flick/src/: config.rs  context.rs  credential.rs  crypto.rs  error.rs  history.rs  lib.rs  model.rs  model_list.rs  model_registry.rs  platform.rs  provider.rs  provider_registry.rs  result.rs  runner.rs  structured_output.rs  test_support.rs  validation.rs
flick/src/provider/: chat_completions.rs  http.rs  messages.rs
flick/tests/: integration.rs  runner.rs
flick/tests/common/: mod.rs
prompts/: project_assistant.md
src/: agent.rs  config.rs  context.rs  credential.rs  error.rs  event.rs  history.rs  lib.rs  main.rs  model.rs  model_list.rs  prompter.rs  provider.rs  runner.rs  sandbox.rs  tool.rs
src/provider/: chat_completions.rs  messages.rs  sse.rs
tests/: agent.rs  integration.rs  runner.rs
tests/common/: mod.rs
