[package]
name = "flick"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
tokio = { version = "1", features = ["rt", "macros", "fs", "io-util", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
clap = { version = "4", features = ["derive"] }
chacha20poly1305 = "0.10"
zeroize = { version = "1", features = ["alloc"] }
hex = "0.4"
dialoguer = "0.12"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1" }
wiremock = "0.6"
serial_test = "3"

[lints.rust]
unsafe_code = "deny"
warnings = "deny"

[profile.release]
lto = true
codegen-units = 1
strip = true

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
# async fns in DynProvider trait are not Send-bounded by design (current_thread runtime)
future_not_send = "allow"
cargo = { level = "warn", priority = -1 }
# flick is a CLI tool, not a library — description/homepage/keywords not needed
cargo_common_metadata = "allow"
# reqwest and tokio pull overlapping transitive deps; not actionable
multiple_crate_versions = "allow"
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"
dbg_macro = "deny"
