[workspace]
members = ["flick", "flick-cli"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "deny"
warnings = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
# async fns in DynProvider trait are not Send-bounded by design (current_thread runtime)
future_not_send = "allow"
cargo = { level = "warn", priority = -1 }
# reqwest and tokio pull overlapping transitive deps; not actionable
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"
dbg_macro = "deny"

[profile.release]
lto = true
codegen-units = 1
strip = true
