[package]
name = "flick-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "flick"
path = "src/main.rs"

[dependencies]
flick = { path = "../flick", features = ["cli"] }
clap = { version = "4", features = ["derive"] }
dialoguer = "0.12"
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "fs", "io-util"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
flick = { path = "../flick", features = ["cli", "testing"] }
tempfile = "3"

[lints]
workspace = true
