[package]
name = "flick"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
toml = "0.8"
thiserror = "2"
tokio = { version = "1", features = ["rt", "fs", "io-util", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
chacha20poly1305 = "0.10"
zeroize = { version = "1", features = ["alloc"] }
hex = "0.4"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
clap = { version = "4", features = ["derive"], optional = true }

[features]
cli = ["clap"]
testing = []

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros"] }
wiremock = "0.6"
serial_test = "3"

[lints]
workspace = true
